
No release numbers
------------------
 - Thu Dec 14 03:39:34 UTC 2000
  - Change the 0x01 to a 0x00 in auth request to make buddy lists work again
  - Rearrange bytes in setversions() to match winaim
  - Add several cachesnac() calls
  - Add hostonline and hostversions parsers (superfluous)

 - Wed Dec 13 02:26:39 UTC 2000
  - Create aim_cachesnac()
  - Some long overdue cleanups

 - Wed Dec 13 00:38:56 UTC 2000
  - Added the client update/version info to the authresp callback
  - Added the prototype for aim_getfile_send_chunk to aim.h

 - Tue Dec 12 23:02:41 UTC 2000
  - Got pissed off at sess->logininfo.  Got rid of it.
    - Now pass all that stuff in as varargs, like it should be.
    - *** Look at the changes to faimtest. You'll also need to
          change anything in your code that references sess->logininfo
          to reference sess->sn instead.  The rest of the other info
          is now unavailable (it was before, too, it just didnt look like it).
  - A few other minor cleanups.
  - Added aim_gettlv8/16/32, aim_puttlv_8, and aim_addtlvtochain_noval.
  - Added that short 0x004a TLV to the auth request, like WinAIM 4.3.

 - Mon Dec  4 23:46:35 UTC 2000
  - Add exchange to the create response callback (doh!)

 - Sat Dec  2 02:14:45 UTC 2000
  - Dumb bug in aim_clearhandlers()

 - Fri Dec  1 23:48:38 UTC 2000
  - Store exchange along with room name in the great chat hack

 - Fri Dec  1 22:25:56 UTC 2000
  - Fix numerous tiny (but sometimes catastrophic) bugs dealing
      with connection death (particularly with chat connections)
  - *** Any connection with a -1 fd will get returned by aim_select
      immediatly now... your code probably already handles this implicitly.

 - Wed Nov 29 17:31:23 UTC 2000
  - Rewrote some of the msgcookie stuff
  - Changed cachecookies to uncachecookies where it makes sense (arg!)
  - Minor other stuff
 
 - Fri Nov 10 08:24:34 UTC 2000
  - Add sess->flags (replaces sess->snaclogin)